--- a/scorpion_network_driver/scorpion_network_driver.csproj
+++ b/scorpion_network_driver/scorpion_network_driver.csproj
@@ -1,8 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Scorpion-AES\Scorpion_Aes.csproj" />
+    <ProjectReference Include="..\..\Scorpion-Console-Read-Write\consolereadwrite.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
